# ImageMagick

./: .travis.yml  Makefile.am  Makefile.in  configure  configure.ac
.github/workflows/: daily.yml  main.yml
MagickCore/: Makefile.am  static.h  version.c
coders/: Makefile.am  coders-list.h  coders.h
rust/: Cargo.toml  build.rs  wrapper.c  wrapper.h
rust/src/: bindings.rs  lib.rs
rust/src/coders/: mod.rs  null.rs  wbmp.rs
