[package]
name = "imagemagick-rust"
version = "0.1.0"
authors = ["ImageMagick DEvelopers <???>"]
edition = "2018"
publish = false

[dependencies]
bitflags = "1"
paste = "1"
libc = "0.2"

[build-dependencies]
bindgen = "0.56"

[lib]
name = "imagemagick_rust"
crate-type = ["staticlib"]

[profile.release]
lto = true